[gd_scene load_steps=17 format=2]

[ext_resource path="res://textures/TitleScreen.png" type="Texture" id=1]
[ext_resource path="res://textures/TitleCastle.png" type="Texture" id=2]
[ext_resource path="res://hud/HudTheme.theme" type="Theme" id=3]
[ext_resource path="res://TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://sounds/24 - Morning Star Pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://hud/FullScreen.tres" type="Texture" id=6]
[ext_resource path="res://hud/WindowedMode.tres" type="Texture" id=7]

[sub_resource type="Animation" id=3]
resource_name = "BatFlapping"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 13 ]
}

[sub_resource type="Animation" id=1]
resource_name = "IntroCastle"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "BatFlapping"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IntroCastle"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=13]
states/BatFlapping/node = SubResource( 10 )
states/BatFlapping/position = Vector2( 462, 73 )
states/IntroCastle/node = SubResource( 11 )
states/IntroCastle/position = Vector2( 168, 82 )
transitions = [ "IntroCastle", "BatFlapping", SubResource( 12 ) ]
start_node = "IntroCastle"
end_node = "BatFlapping"

[sub_resource type="AnimationNodeBlendTree" id=8]
nodes/StateMachine/node = SubResource( 13 )
nodes/StateMachine/position = Vector2( 400, 120 )
nodes/output/position = Vector2( 760, 80 )
node_connections = [ "output", 0, "StateMachine" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="TitleScreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 439, 252 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IntroCastle"
anims/BatFlapping = SubResource( 3 )
anims/IntroCastle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/StateMachine/playback = SubResource( 9 )

[node name="Label2" type="Label" parent="."]
margin_left = 97.0
margin_top = 241.0
margin_right = 427.0
margin_bottom = 274.0
theme = ExtResource( 3 )
text = "PRESS ANY KEY
TO START"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 64.0
margin_top = 313.0
margin_right = 439.0
margin_bottom = 382.0
theme = ExtResource( 3 )
text = "CASTLEVANIA TM AND Â© 1987
KONAMI INDUSTRY CO., LTD.
RECREATED IN GODOT
BY TONY CASALE 2022"
align = 1

[node name="CheatCheckbox" type="CheckBox" parent="."]
margin_left = 393.0
margin_top = 39.0
margin_right = 512.0
margin_bottom = 63.0
focus_neighbour_bottom = NodePath("../Label2")
theme = ExtResource( 3 )
text = "CHEATS"

[node name="FullscreenCheckbox" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 42.0
margin_right = 44.0
margin_bottom = 78.0
hint_tooltip = "Toggle Fullscreen"
focus_neighbour_bottom = NodePath("../Label2")
theme = ExtResource( 3 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="LevelSelectButton" type="Control" parent="."]
margin_left = 365.0
margin_top = 197.0
margin_right = 429.0
margin_bottom = 261.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="toggled" from="CheatCheckbox" to="." method="_on_CheatCheckbox_toggled"]
[connection signal="toggled" from="FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="gui_input" from="LevelSelectButton" to="." method="_on_LevelSelectButton_gui_input"]
